[package]
name = "xav"
version = "0.1.0"
authors = ["Emre Akyüz emreakyuz_2@hotmail.com"]
edition = "2024"
description = "Fastest & the most minimal chunked/target quality AV1 encoding"
readme = "README.md"
homepage = "https://github.com/emrakyz/xav"
repository = "https://github.com/emrakyz/xav"
license = "MIT"
keywords = ["av1", "video", "multimedia", "encoding", "quality", "chunking"]
categories = ["multimedia::video", "command-line-utilities"]

[features]
default = []
static = ["av-decoders"]
vship = []

[dependencies]
libc = "0.2.177"
crossbeam-channel = "0.5.15"
av-decoders = { version = "0.5.0", default-features = false, features = ["ffmpeg_static"], optional = true }
av-scenechange = { git = "https://github.com/emrakyz/av-scenechange", default-features = false, features = ["ffmpeg", "asm", "nasm-rs", "cc", "libc"] }
av1-grain = "0.2.5"

[patch.crates-io]
ffmpeg-the-third = { git = "https://github.com/emrakyz/ffmpeg-the-third" }
ffmpeg-sys-the-third = { git = "https://github.com/emrakyz/ffmpeg-the-third" }

[profile.release]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = 0
panic = "abort"
lto = "fat"
